// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IssueHeader /> data 1`] = `
<header
  className="issue-header"
>
  <div
    className="issue-header__title"
  >
    <h3
      className="headline-2"
    >
      1
      . 
      name
    </h3>
    <h4
      className="headline-3"
    />
  </div>
  <div
    className="issue-header__state"
  >
    <h4
      className="headline-3"
    >
      type name
    </h4>
    <h4
      className="headline-3"
    >
      status
    </h4>
    <time>
      2001-01-01
    </time>
  </div>
</header>
`;

exports[`<IssueHeader /> default props 1`] = `
<header
  className="issue-header"
>
  <div
    className="issue-header__title"
  >
    <h3
      className="headline-2"
    >
      . 
    </h3>
    <h4
      className="headline-3"
    />
  </div>
  <div
    className="issue-header__state"
  >
    <h4
      className="headline-3"
    />
    <h4
      className="headline-3"
    />
    <time />
  </div>
</header>
`;
